[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "chorokit"
version = "0.1.0"
description = "Choropleth helper for GeoPandas with clean defaults for projection, layout and legend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Matt Stiles"}]
dependencies = [
  "geopandas>=0.14",
  "matplotlib>=3.7",
  "mapclassify>=2.6",
  "pyproj>=3.6",
  "shapely>=2.0"
]

[project.urls]
Homepage = "https://github.com/mstiles/chorokit"

[project.scripts]
chorokit = "chorokit.cli:main"
ckit = "chorokit.cli:main"
